syntax = "proto3";

package api;

option go_package = "github.com/vigneshSrinivasan2005/DistRAFT/internal/api";

service MLWorkerService {
  rpc GetModel (ModelRequest) returns (stream ModelChunk);
  rpc SendGradients (stream GradientChunk) returns (Ack);
}

message ModelChunk {
  int32 chunk_id = 1;
  bytes data = 2;
}

message GradientChunk {
  string job_id = 1;
  string worker_id = 2;
  bytes data = 3;
}

message Ack {
  bool success = 1;
}

message ModelRequest {}